test/classes/diten/multipledestructor.good
multipledestructor.chpl:7: error: ambiguous call 'C.deinit()'
multipledestructor.chpl:2: note: candidates are: C.deinit()
multipledestructor.chpl:4: note:                 C.deinit()
